parser/src/snapshots/rustpython_parser__string__tests__bell_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 9,
            },
        ),
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 9,
                        },
                    ),
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{7}",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
