parser/src/snapshots/rustpython_parser__string__tests__carriage_return_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..21,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..21,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\r",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
