parser/src/snapshots/rustpython_parser__string__tests__character_tabulation_with_justification_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..45,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..45,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{89}",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
