parser/src/snapshots/rustpython_parser__string__tests__delete_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..12,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..12,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{7f}",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
