parser/src/snapshots/rustpython_parser__string__tests__escape_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..12,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..12,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{1b}",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
