parser/src/snapshots/rustpython_parser__string__tests__escape_char_in_byte_literal.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..13,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..13,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Bytes(
                                [
                                    111,
                                    109,
                                    107,
                                    109,
                                    111,
                                    107,
                                    92,
                                    88,
                                    97,
                                    97,
                                ],
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
