parser/src/snapshots/rustpython_parser__string__tests__escape_octet.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 14,
            },
        ),
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 14,
                        },
                    ),
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Bytes(
                                [
                                    35,
                                    97,
                                    4,
                                    83,
                                    52,
                                ],
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
