parser/src/snapshots/rustpython_parser__string__tests__form_feed_alias.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..15,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..15,
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "\u{c}",
                            ),
                            kind: None,
                        },
                    ),
                },
            },
        ),
    },
]
