parser/src/snapshots/rustpython_parser__string__tests__fstring_escaped_character.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..8,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Located {
                    range: 0..8,
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Located {
                                    range: 0..8,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "\\",
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Located {
                                    range: 0..8,
                                    custom: (),
                                    node: FormattedValue(
                                        ExprFormattedValue {
                                            value: Located {
                                                range: 5..6,
                                                custom: (),
                                                node: Name(
                                                    ExprName {
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                            conversion: 0,
                                            format_spec: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
